test/users/ferguson/typenotthis.good
typenotthis.chpl:8: In method 'do_something':
typenotthis.chpl:10: error: unresolved call 'type R.do_something_helper()'
typenotthis.chpl:4: note: this candidate did not match: R.do_something_helper()
typenotthis.chpl:10: note: because method call receiver is a type
typenotthis.chpl:4: note: but is passed to non-type formal 'this: R'
